# CUDA-arithmetic

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  check_CUDA_arch  cmake_install.cmake
include/: cuda_structs.h  poseidon.h
sources/: CMakeLists.txt  FFT.cu  Makefile  cmake_install.cmake  device_info.cu  experiemental2.cu  main.cu  poseidon  poseidon.cu  poseidon_constants.cu  poseidon_main.cu  trash.cu
utilities/: poseidon_constants_generator.py
